# nucleo-f767zi-rs

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: board.rs  main.rs
