[package]
name = "nucleo-f767zi"
description = "Experimental embedded Rust project for nucleo-f767zi-rs board."
version = "0.1.0"
edition = "2024"
authors = ["CPZhang9487 chenpozhang@gmail.com"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/CPZhang9487/nucleo-f767zi-rs"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.1.1"
defmt-rtt = "1.3.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { version = "0.6.0", features = ["defmt", "exti", "memory-x", "single-bank", "stm32f767zi", "time-driver-any", "unstable-pac"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.dev]
debug = 2
opt-level = 0

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
debug = 0
